# CareerFlow

./: .env.example  .gitignore  README.md  models.py  package-lock.json  package.json  resume_engineer.py
backend/: pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/graph/: __init__.py  router.py  state.py
backend/app/graph/nodes/: __init__.py  cover_letter_humanizer.py  interview_simulator.py  resume_tailor.py
backend/app/memory/: __init__.py
backend/app/schemas/: __init__.py
backend/app/tracing/: __init__.py
backend/tests/: conftest.py  test_careerflow.py
data/cover_letters/: sample_swe_cover_letter.md
data/essays/: learning_from_failure.md  why_i_build.md
data/resumes/operations_marketing/: base_resume.md
data/resumes/product_management/: base_resume.md
data/resumes/software_engineering/: base_resume.md
data/resumes/ui_ux_design/: base_resume.md
frontend/: package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: CoverLetterViewer.tsx  InterviewSimulator.tsx  ResumeViewer.tsx
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
src/: App.css  App.jsx  Evaluation.jsx  Experiences.jsx  Sidebar.jsx
src/backend/: app.py  data.py  main.py  prompts.py
