[tool.poetry]
name = "careerflow-backend"
version = "0.1.0"
description = "Context-Aware Career Orchestration Engine – backend"
authors = ["CareerFlow"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"

# Web framework
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }

# LLM orchestration
langchain = "^0.2.0"
langchain-openai = "^0.1.0"
langchain-community = "^0.2.0"
langgraph = "^0.1.0"
langsmith = "^0.1.0"

# Document retrieval / RAG
llama-index = "^0.10.0"
llama-index-embeddings-openai = "^0.1.0"

# Schema enforcement
pydantic = "^2.7.0"
pydantic-settings = "^2.2.0"

# Utility
python-dotenv = "^1.0.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"
ruff = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
